force-app/main/default/objects/Ownership__c/Ownership__c.object-meta.xml
<CustomObject>
    <label>Ownership</label>
    <nameField>
        <displayFormat>OID-{000000}</displayFormat>
        <label>Ownership ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>