force-app/main/default/objects/Ownership__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ownerships</relationshipLabel>
    <relationshipName>Ownerships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>