force-app/main/default/objects/Ownership__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ownerships (Subsidiary)</relationshipLabel>
    <relationshipName>Subsidiaries</relationshipName>
    <type>Lookup</type>
</CustomField>